@@ -1,7 +1,8 @@
 <ul>
     <li>V1.0.0
     <ul>
-        <li>2003-10-10 AP - Query Tool execute to file
+        <li>2003-10-13 AP - Fix encoding when connecting
+		<li>2003-10-10 AP - Query Tool execute to file
         <li>2003-10-07 DP - Set cache value correctly when creating sequences.
         <li>2003-10-07 DP - Handle array of definable length types correctly e.g. numeric(12,8)[].
         <li>2003-10-07 DP - Display/use char instead of bpchar.
